--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         
                         <div class="form-group">
                             <select id="course" name="course" required>
-                                <option value="">Select Course</option>
+                                <!-- <option value="">Select Course</option> -->
                                 <option value="jee">JEE Advanced</option>
                                 <option value="neet">NEET UG</option>
                                 <option value="foundation">Foundation</option>
