final bebfore launch

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     </div>
                     
                     <div class="card-glow"></div>
-                </div>--
+                </div>
             </div>
         </div>
     </section>
